move environment variables to env file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,27 +11,24 @@ services:
     build:
       context: ./edgetech-telemetry-pinephone/telemetry
       dockerfile: ./Dockerfile
-    environment:
-      - TELEMETRY_TOPIC=/AISonobuoy/<HOSTNAME>/telemetry/telemetry/string
-      - BATTERY_CAPACITY_FILE_PATH=/root/battery_capacity
-      - UPTIME_FILE_PATH=/root/uptime
-      - MQTT_IP=mqtt
     volumes:
-      - /sys/class/power_supply/rk818-battery/capacity:/root/battery_capacity
-      - /proc/uptime:/root/uptime
+      - /sys/class/power_supply/rk818-battery/capacity:/battery_capacity
+      - /proc/uptime:/uptime
     restart: unless-stopped
     depends_on: 
       - mqtt
+    env_file:
+      - .env
   http-uploader:
     image: iqtlabs/edgetech-http-uploader:latest
     build:
       context: ./edgetech-http-uploader/http-uploader
       dockerfile: ./Dockerfile
-    environment:
-      - TELEMETRY_TOPIC=/AISonobuoy/<HOSTNAME>/telemetry/telemetry/string
-      - MQTT_IP=mqtt
     restart: unless-stopped
     depends_on: 
       - mqtt
+    environment:
+      - WEBHOOK_URL=${WEBHOOK_URL:?error}
+      - WEBHOOK_TOKEN=${WEBHOOK_TOKEN:?error}
     env_file:
       - .env
