--- a/http-uploader/pyproject.toml
+++ b/http-uploader/pyproject.toml
@@ -2,7 +2,7 @@
 name = "http-uploader"
 version = "0.1.0"
 description = "MQTT client to read data from telemetry topic and POST it to an HTTP endpoint"
-authors = ["arichadda <ari.chadda@gmail.com>"]
+authors = ["Ari <achadda@iqt.org>", "Rob <rcaudill@iqt.org>", "Logan <lkunka@iqt.org>", "Mona <mgogia@iqt.org>", "Jon <jmeade@iqt.org>", "Mike <mchadwick@iqt.org>"]
 license = "Apache 2.0"
 
 [tool.poetry.dependencies]
